--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.6",
-    "nconf": "^0.11.3"
+    "nconf": "^0.11.3",
+    "winston": "^3.3.3"
   },
   "description": ""
 }
