--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "mongoose": "^6.0.6",
     "nconf": "^0.11.3",
+    "reflect-metadata": "^0.1.13",
     "winston": "^3.3.3"
   },
   "description": ""
