--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
     "prestart": "npm run build",
     "start": "node .",
     "dev": "tsnd --respawn src/app.ts",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "mocha -r ts-node/register 'src/**/*spec.ts' --exit",
+    "coverage": "nyc npm run test -t ./.nyc-output report --reporter=html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/nconf": "^0.10.1",
     "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "axios": "^0.21.4",
+    "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -27,12 +33,15 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
+    "mocha": "^9.1.2",
+    "nyc": "^15.1.0",
     "prettier": "^2.4.0",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "chai-http": "^4.3.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
