--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,4 +1,4 @@
 {
   "PORT": 3000,
-  "MONGO_URI": "mongodb://127.0.0.1:27017/items"
+  "MONGO_URI": "mongodb://admin:admin@mongo:27017/?authSource=admin"
 }
