--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
-version: '3.4'
+version: '3.7'
 
 services:
-  todosmongo:
-    build: .      
+  todo-api:
+    build: .   
+    command: npm start dev 
     ports:
-     - "3000:3000"
+     - 3000:3000
+     - 9229:9229     
+    volumes:
+     - ./:/app
+     - /app/node_modules
+  
+  todo-test:
+    build: .
+    command: npm run test      
+    ports:
+     - "5000:3000"
     volumes:
      - ./:/app
      - /app/node_modules
 
   mongo:
-    image: mongo
+    image: mongo:5.0.3
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=admin
