--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "mocha": "^9.1.2",
+    "nodemon": "^2.0.13",
     "nyc": "^15.1.0",
     "prettier": "^2.4.0",
     "ts-node": "^10.2.1",
@@ -41,7 +42,6 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "chai-http": "^4.3.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
