--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,16 @@ version: '3.7'
 
 services:
   todo-api:
-    build: .   
-    command: npm start dev 
-    ports:
-     - 3000:3000
-     - 9229:9229     
-    volumes:
-     - ./:/app
-     - /app/node_modules
-  
-  todo-test:
     build: .
-    command: npm run test      
+    command: npm start dev
     ports:
-     - "5000:3000"
+     - "3000:3000"
+     - "9229:9229"
     volumes:
      - ./:/app
      - /app/node_modules
+    depends_on:
+     - mongo
 
   mongo:
     image: mongo:5.0.3
