--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,5 +1,8 @@
 {
   "PORT": 3000,
-  "MONGO_URI": "mongodb://admin:admin@mongo:27017/?authSource=admin",
-  "MONGO_URI_TEST": "mongodb://127.0.0.1:27017/items"
+  "MONGODB_USER": "admin",
+  "MONGODB_PASSWORD": "admin",
+  "MONGODB_CONNECTION": "localhost",
+  "MONGODB_DATABASE": "tasks",
+  "MONGODB_DATABASE_TEST": "tasks-test"
 }
