--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,13 +2,15 @@ version: '3.7'
 
 services:
   todo-api:
-    build: .
-    command: npm run dev
+    build:
+      context: .
+      target: dev
     ports:
      - 3000:3000
     volumes:
      - ./:/app
      - /app/node_modules
+     - /app/app
     depends_on:
      - mongo
 
