--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/nconf": "^0.10.1",
     "@types/node": "^16.7.13",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "axios": "^0.21.4",
@@ -41,9 +43,11 @@
     "nodemon": "^2.0.13",
     "nyc": "^15.1.0",
     "prettier": "^2.4.0",
+    "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "class-transformer": "^0.4.0",
