--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "mocha": "^9.1.2",
     "nodemon": "^2.0.13",
     "nyc": "^15.1.0",
+    "openapi-comment-parser": "^1.0.0",
     "prettier": "^2.4.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.3",
-    "yamljs": "^0.3.0"
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "class-transformer": "^0.4.0",
