--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker-compose -f docker-compose.yml up --exit-code-from todo-api todo-api
+      run: docker-compose up --exit-code-from todo-api todo-api
