--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext .ts",
     "style-fix": "npm run lint -- --fix",
     "test": "NODE_ENV=test nyc mocha ./src ./test",
-    "test:watch": "nodemon -x 'NODE_ENV=test mocha ./src ./test'"
+    "test:watch": "nodemon -x 'NODE_ENV=test mocha ./src ./test'",
+    "test:github": "NODE_ENV=test nyc --reporter=text-summary mocha ./src ./test"
   },
   "keywords": [],
   "author": "Vasyl Kushnir",
