--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,11 @@ jobs:
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.6.0
       with:
-        mongodb-version: ${{ matrix.mongodb-version }}     
+        mongodb-version: ${{ matrix.mongodb-version }}
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.SECRET_GITHUB_TOKEN }}
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run lint
