--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
-        repo-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run lint
